# theatris-rpo

./: .gitignore  README.md  TODO.txt  main.py  original_vm1.py  pyproject.toml
docs/: OSC_address_space.md  TODO.txt
scripts/: get_test_videos  install_systemd_service  mount_nfs  test_video_urls  theatris_rpo  theatris_rpo.service
src/: __main__.py
src/theatris_rpo/: base_interface.py  config.py  drm_kms_info_tool.py  gst_pipeline.py  log.py  main.py  osc_interface.py  slot_flag.py  slot_state.py  video_machine.py  video_output.py  video_slot.py
src/theatris_rpo/media_registry/: media_registry.py
tests/: test_media_registry.py
trials/: glib_asyncio.py  glib_asyncio_minimal_working_example.py
